<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bulletin</string>
    <string name="welcome">welcome to bulletin!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="username">enter username</string>
    <string name="password">enter password</string>
    <string name="title_activity_home_screen">Event Home Screen</string>
    <string name="createevent">create an event</string>
    <string name="signup">Sign Up</string>
    <string name="passwordagain">enter password again</string>
    <string name="enterusername">enter username</string>
    <string name="enterpassword">enter password</string>
    <string name="signout">sign out</string>
    <string name="title_activity_login_error">LoginErrorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernamerules">username must be at least 5 characters</string>
    <string name="passwordrules">password must be at least 8 characters</string>
    <string name="loginerror">Your username or password did not meet the minimum requirements. Please try again.</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="chooseusername">choose a username</string>
    <string name="choosepassword">choose a password</string>
    <string name="title_activity_create_post">CreatePostActivity</string>
    <string name="eventtitle">title of event</string>
    <string name="eventhost">host organization</string>
    <string name="eventdescription">event description</string>
    <string name="eventtime">time of event (military time)</string>
    <string name="eventdate">date of event (mm/dd/yy)</string>
    <string name="eventlocation">location of event</string>
    <string name="postevent">post event to bulletin board</string>
    <string name="eventcategory">choose an event category</string>
    <string name="categorytechnology">technology &amp; design</string>
    <string name="categorybusiness">business &amp; finance</string>
    <string name="categoryhealth">health professions</string>
    <string name="title_activity_business">BusinessActivity</string>
    <string name="title_activity_health">HealthActivity</string>
    <string name="eventcity">city, state of event (lowercase, e.g. new haven, ct)</string>
    <string name="title_activity_technology">TechnologyActivity</string>
    <string name="technologytitle">these are the local technology and design events</string>
    <string name="healthtitle">these are the local health professions events</string>
    <string name="businesstitle">these are the local business and finance events</string>
    <string name="technologygoback">back</string>
    <string name="healthgoback">back</string>
    <string name="businessgoback">back</string>
    <string name="cancelcreatepost">cancel</string>
    <string name="citytosearch">city, state to search (lowercase, e.g. new haven, ct)</string>
    <string name="categorywarning">if you do not choose a category, your post will not be displayed</string>
    <string name="bulletinlogo">Bulletin Logo</string>
    <string name="enteremail">enter email address</string>
    <string name="signupgoback">back</string>
    <string name="createuser">create user</string>

</resources>
