<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/chooseusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseusername"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/usernamerules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernamerules"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/choosepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choosepassword"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordrules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordrules"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getStarted"
        android:text="@string/login" />

</LinearLayout>
