<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/createevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signout"
        android:layout_alignBottom="@+id/signout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/createevent" />

    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/signout" />

    <Button
        android:id="@+id/choosebusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choosehealth"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/categorybusiness" />

    <Button
        android:id="@+id/choosehealth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/createevent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="52dp"
        android:text="@string/categoryhealth" />

    <Button
        android:id="@+id/choosetechnology"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choosebusiness"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/categorytechnology" />

    <TextView
        android:id="@+id/categoryoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/choosetechnology"
        android:layout_alignLeft="@+id/createevent"
        android:layout_alignStart="@+id/createevent"
        android:layout_marginBottom="16dp"
        android:text="@string/eventcategory"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/cityoptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/categoryoptions"
        android:layout_alignStart="@+id/categoryoptions"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="@string/eventcity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/choosecityvalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cityoptions"
        android:layout_alignStart="@+id/cityoptions"
        android:layout_below="@+id/cityoptions"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

</RelativeLayout>